# RSP

./: CMakeLists.txt  LICENSE.txt  README.md
include/RSP/: rsp.h  string.h
src/: main.c  rsp.c
